Revelation changelog

---------------[ xxxx-xx-xx : 0.3.1 ]---------------

2004-06-09  Erik Grinaker <erikg@codepoet.no>

	* fixed a bug with spin buttons which made it impossible
	to set a value with the keyboard

	* when saving, missing parent directories are automatically
	created

2004-06-06  Erik Grinaker <erikg@codepoet.no>

	* split out data handlers into separate modules

2004-06-03  Erik Grinaker <erikg@codepoet.no>

	* the vertical scrollbar in the main window is only shown
	when needed

2004-05-09  Erik Grinaker <erikg@codepoet.no>

	* updated all references to the wired-networks.net domain
	to point to the new codepoet.no domain

	* added Id keyword to all code files

2004-04-30  Erik Grinaker <erikg@codepoet.no>

	* fixed a bug which caused the file selector to be opened
	when saving a file on quit confirmation

	* fixed a few bugs which caused fields containing & to
	behave unpredicably (not always displayed)


---------------[ 2004-04-06 : 0.3.0 ]---------------

2004-04-05  Erik Grinaker <erikg@wired-networks.net>

	* fixed a bug which caused previously expanded folders to
	retain the open folder icon after the file is unlocked

	* set a sane default button (cancel) for the revert
	confirmation dialog

	* added a NEWS file

	* added note on restarting gconfd to the INSTALL file

2004-03-31  Erik Grinaker <erikg@wired-networks.net>

	* fixed the gconf schema installation

	* fixed a couple of bugs introduced in recent changes

2004-03-26  Erik Grinaker <erikg@wired-networks.net>

	* make setup.py register the gconf schema with the gconf daemon

2004-03-25  Erik Grinaker <erikg@wired-networks.net>

	* fixed a bug in DataStore.iter_traverse_next() which
	caused it to fail when given None as input

	* the password generator now uses a balancing algorithm
	which ensures a minimum amount of the different
	character classes

	* doubleclicking an entry now opens the edit dialog. also
	moved the edit and remove menu items to the top of the